--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ if (localPropsFile.exists()) {
 }
 def OPENAI_API_KEY = localProps.getProperty("OPENAI_API_KEY", "")
 def DOUBAO_API_KEY = localProps.getProperty("DOUBAO_API_KEY", "")
+def BACKEND_BASE_URL = localProps.getProperty("BACKEND_BASE_URL", "http://10.0.2.2:3000")
 
 android {
     namespace 'com.yx.chatrobot'
@@ -25,6 +26,7 @@ android {
 
         buildConfigField 'String', 'OPENAI_API_KEY', '"' + OPENAI_API_KEY + '"'
         buildConfigField 'String', 'DOUBAO_API_KEY', '"' + DOUBAO_API_KEY + '"'
+        buildConfigField 'String', 'BACKEND_BASE_URL', '"' + BACKEND_BASE_URL + '"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
